ChangeLog for ARQ
=================

==== ARQ 2.5

+ Fixed bug with path parsing when "a" (for rdf:type) is used in a property list (using ;) 

==== ARQ 2.4

+ Change to interface for query compilation : Algebra.compile and Algebra.optimize 

+ Property paths added.  See documentation.
  
+ Simplify the interface between ARQ and data sources.
  StageGenerator example updated.   

==== ARQ 2.3

+ HAVING / ORDER BY variable, where variable is SELECT as an aggregate or computed value now works. 
  (current restriction: can't have the expression directly in the ORDER BY - need to project the variable)  

+ Upgrade to Lucene 2.3.1

+ Change return type of ResultFactor.copyResults to ResultSetRewinable (a sub interface of ResultSet).

+ Allow inital bindings for Updates (ignored unless a Modify operation)

+ Added SUM(?x) aggregate

+ Added { SELECT } (nested SELECT) and LET (assignment) to ARQ extended SPARQL.

+ Added optimization rewrite of algebra expressions for FILTER(?x = :x) and FILTER(sameTerm(?x, :x))
  so that the required term is substituted into the pattern before execution.
  Cautiously applied to basic graph patterns and quad patterns.
 
+ Bug fix: ARQ 2.2 broke property functions in many nested structures. 

+ src-examples: example of SPARQL/Update

+ Fix bug: OpUnion flattening was not happening (Main query engine, OpCompiler) 

+ Fix bug: HttQueryEngine(in HttpQuery) generated bad POST requests with a trailing &.

+ New command arq.load, which loads files into graphs.  Special case of arq.update

==== ARQ 2.2

+ Added command line tool, arq.update, for applying SPARQL/Update requests
  to a graph store or dataset described by an assembler file.

+ LARQ: 
  Remove restriction that indexes have to be closed for writing before reading
  Becare: in Lucene, reader indexes (like LARQIndexes) see the index as at the point
  in time when the index was created.  Must get a new reader to see later updates.

+ QueryEngineHTTP