@@ -97,11 +97,11 @@ Firefox puts space in with this  --><html xmlns="http://www.w3.org/1999/xhtml">
         </tr>
 
         <tr>
-          <td style="text-align: left;"><code>fn:string-join(<i>string1</i>, <i>
-          string2</i>)</code></td>
+          <td style="text-align: left;"><code>fn:string-concat(<i>string</i>, <i>
+          ...</i>)</code></td>
 
           <td style="text-align: left;">Return the concatenation of
-          two strings.<p>&nbsp;</td>
+          strings.<p>&nbsp;</td>
         </tr>
 
         <tr>
@@ -303,6 +303,12 @@ Firefox puts space in with this  --><html xmlns="http://www.w3.org/1999/xhtml">
           <code>afn:substring</code></td>
 
           <td style="text-align: left;">Synonym for afn:substring</td>
+        </tr>
+        <tr>
+          <td style="text-align: left;">
+          <code>afn:strjoin(<i>sep</i>, <i>string ...</i>)</code></td>
+
+          <td style="text-align: left;">Concatentate string together, with a separator.</td>
         </tr>
       	<tr>
           <td style="text-align: left;">
